// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> renders correctly with icon 1`] = `
<i
  className="material-icons icon"
  style={
    Object {
      "fontSize": "24px",
      "height": "24px",
      "width": "24px",
    }
  }
>
  not_an_icon
</i>
`;

exports[`<Icon /> renders correctly with icon and size 1`] = `
<i
  className="material-icons icon"
  style={
    Object {
      "fontSize": "50px",
      "height": "50px",
      "width": "50px",
    }
  }
>
  not_an_icon
</i>
`;

exports[`<Icon /> renders correctly without props 1`] = `
<i
  className="material-icons icon"
  style={
    Object {
      "fontSize": "24px",
      "height": "24px",
      "width": "24px",
    }
  }
/>
`;
